--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 
+
+
 .container {
     width: min(100%, 1440px);
     margin: auto;
 }
 
+/* header */
 header {
     display: flex;
     padding: 52px 98px;
@@ -52,4 +55,51 @@ header {
     color: #758BFD;
     font-size: 20px;
     padding-right: 8px;
+}
+
+/* section */
+
+section {
+    padding: 115px 98px;
+    background: #DDEAF8;
+}
+
+.section_title {
+    color: #27187F;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 32px;
+    font-weight: 700;
+    line-height: normal;
+    margin-bottom: 68px;
+}
+
+.cards_container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 51px 22px;
+}
+
+.section_card {
+    width: 400px;
+    padding: 33px 30px;
+    border-radius: 10px;
+    background: #FFF;
+    display: flex;
+    flex-direction: column;
+    row-gap: 33px;
+}
+
+.card_img {
+    width: 100%;
+    height: 188px;
+    object-fit: cover;
+}
+
+.card_text {
+    color: #133B3A;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: normal;
 }
